almost done with this

--- a/esha.html
+++ b/esha.html
@@ -18,7 +18,12 @@ h1 {
   text-align:center;
   /*imports the font family*/
   font-family: 'Londrina Shadow', cursive;
+
+
   }
+  .header{
+     /*slides the margin down to its not bumping the top of the screen*/
+    margin:60px 0 0 0;}
 h2{
   /*centers*/
   text-align:center;
@@ -77,9 +82,10 @@ p {
 </head>
 
 <body>
-<h1>Donny's Restaurant</h1>
-
+<div class="header">
+<h1>esha's restaurant</h1>
 <h2>A New York City Eatery</h2>
+</header>
 <div class="first">
 <!--separates the inline p elements with the price thats a span and will be floated right -->
 <p>welsh onion soko <span class="price">$14</span><br />
