--- a/esha.html
+++ b/esha.html
@@ -9,6 +9,7 @@ body {
   font-family: helvetica, sans-serif;
   margin: 0 auto;
   max-width: 600px;
+  background-color:#232323;
 }
 /*uses the google fonts to make this happen*/
 h1 {
@@ -18,18 +19,19 @@ h1 {
   text-align:center;
   /*imports the font family*/
   font-family: 'Londrina Shadow', cursive;
-
-
+  /*slides the margin down to its not bumping the top of the screen*/
+  color:#aaaaaa;
   }
-  .header{
-     /*slides the margin down to its not bumping the top of the screen*/
-    margin:60px 0 0 0;}
 h2{
   /*centers*/
   text-align:center;
   /*decreases the amount  of space at the top, but increases the space at the    bottom*/
   margin:-50px 0 70px 0;
+  color:#bbbbbb;
   }
+  .header{
+    margin:60px 0 0 0;
+    }
 div {
   height: 200px;
   background-size: cover;
